clusters/main/kubernetes/system/longhorn/app/ingress.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: internal
  rules:
    - host: longhorn.${BASE_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.${BASE_DOMAIN}
      secretName: longhorn-tls-0
